--- a/learn.html
+++ b/learn.html
@@ -34,13 +34,13 @@
         <div class="my-3 py-3">
           <h2 class="display-5">Another headline</h2>
           <p class="lead">And an even wittier subheading.</p>
-          <img src="https://wallpaperbrowse.com/media/images/750806.jpg" height="50px" width="50px">        
+          <img src="https://wallpaperbrowse.com/media/images/750806.jpg" height="100%" width="100%">        
         </div>
       <div class="bg-success mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
         <div class="my-3 p-3">
           <h2 class="display-5">Another headline</h2>
           <p class="lead">And an even wittier subheading.</p>
-          <img src="https://wallpaperbrowse.com/media/images/750806.jpg" height="50px" width="50px">
+          <img src="https://wallpaperbrowse.com/media/images/750806.jpg" height="100%" width="100%">
         </div>
     </div>
 
