--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h3 class="masthead-brand">Company Name</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="index.html">Home</a>
-            <a class="nav-link" href="abouts.html">About Us</a>
+            <a class="nav-link" href="about.html">About Us</a>
             <a class="nav-link" href="contact.html">Contact</a>
           </nav>
         </div>
